--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ main{
 main section{
     width: 100%;
     padding: var(--padding-2xl);
+    display: flex;
+    gap: var(--gutter-lg);
 }
 
 .btn{
@@ -45,6 +47,9 @@ main section .left{
 }
 main section .right{
     width: 30%;
+    background-color: var(--bg-secondary-color);
+    padding: var(--padding-lg);
+    border-radius: var(--border-radius-lg);
 }
 main section .top{
     display: flex;
@@ -72,4 +77,37 @@ main section .bottom .placeholder i{
 }
 main section .bottom .placeholder p{
     font-size: var(--font-size-lg);
+}
+main section .right{
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-md);
+}
+main section .right .filters{
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-md);
+}
+main section .right .filter{
+    width: 100%;
+}
+main section .right .filter input{
+    width: 100%;
+    outline: none;
+    margin-top: var(--margin-sm);   
+    appearance: none;
+}
+main section .right .filter input::-webkit-slider-runnable-track{
+    background-color: var(--bg-active-color);
+    height: 3px;
+    border-radius: var(--border-radius-md);
+}
+main section .right .filter input::-webkit-slider-thumb{
+    cursor: pointer;
+    appearance: none;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    background-color: red;
+    margin-top: -8.2px;
 }
