--- a/style.css
+++ b/style.css
@@ -111,3 +111,8 @@ main section .right .filter input::-webkit-slider-thumb{
     background-color: red;
     margin-top: -8.2px;
 }
+canvas{
+    display: none;
+    max-width: 100%;
+    max-height: 80vh;
+}
